--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test &lt;a&gt;click&lt;/a&gt;</title>
+  <title>Test %3ca%3etest2%3c/a%3e</title>
+  <meta name="description" content="test description <a>test</a> %3ca%3etest2%3c/a%3e">
 </head>
 <body>
 <h1>Hello World</h1>
