--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Test %3ca%3etest2%3c/a%3e</title>
-  <meta name="description" content="test description < a">
+  <meta name="description" content="test description <a>click</a>">
 </head>
 <body>
 <h1>Hello World</h1>
