--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test %3ca%3etest2%3c/a%3e</title>
+  <title>Test</title>
   <meta name="description" content="test description <a>click</a>">
 </head>
 <body>
