--- a/pm2.html
+++ b/pm2.html
@@ -3,8 +3,8 @@
     <title>PoC</title>
     <script>
     setTimeout(function() {
-        document.getElementById('myiframe').contentWindow.postMessage('user=test&id=0');
-    }, 1000);
+        document.getElementById('myiframe').contentWindow.postMessage('user=test&id=0',"*");
+    }, 500);
     </script>
 </head>
 <body>
