--- a/csl.html
+++ b/csl.html
@@ -25,10 +25,10 @@
                     if (tk.length == 36) {
                         sendKey("FINAL:"+tk)
                     } else {
-                        sendKey("INT:"+tk)
+                        sendKey("rt:"+request_time+"INT:"+tk)
                         if (bFound == false) {
                             bFound=true
-                            nextChar(tk)
+                         //   nextChar(tk)
                         }
                     }
                 }
