--- a/csl.html
+++ b/csl.html
@@ -26,10 +26,7 @@
                         sendKey("FINAL:"+tk)
                     } else {
                         sendKey("rt:"+request_time+"INT:"+tk)
-                        if (bFound == false) {
-                            bFound=true
-                         //   nextChar(tk)
-                        }
+                        nextChar(tk)
                     }
                 }
             }
