--- a/csl3.html
+++ b/csl3.html
@@ -19,7 +19,7 @@
         }
     };
     sendKey("Started")
-    key = ""
+    key = "508cb091-bb6b-4a95-ba2e-e9acde"
     while (key.length < 37) {
         chars="0123456789-abcdef"
         bFound=false
